<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_TrackConfig" Id="{0bf444be-035e-0e71-1156-30382b0847a6}">
    <Declaration><![CDATA[TYPE ST_TrackConfig :
STRUCT
	TargetPosnBeforeTrackEnd	: LREAL := 100;
	StopPosPowermat				: LREAL := 7611;
	MergeWaitFinishDistance 	: LREAL := 2000;
	DistanceOuterFinishEnd		: LREAL := 1500;
	MergeWait					: TON;
	MergeWaitTime				: TIME := T#1S;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>